# training-material

./: .gitattributes  .gitignore  .gitmessage  CONTRIBUTING.md  README.md  training_contents.md
Accelerators/: CUDA_P100_info.pptx  README.md  xeon_phi_how_to.md
Accelerators/CuBLAS/: .gitignore  Makefile  README.md  build.sh  cl_params.c  cl_params.h  cl_params.txt  gemm.cu  gemm.pbs  run.sh  sgemm_timings.xlsx
Accelerators/GANs/: .gitignore  README.md  gan.py  gan_cpu.pbs  gan_gpu.pbs
Accelerators/Thrust/: Makefile  README.md  vectors.cu  vectors_omp.cpp
C/: README.md  c_intro.pptx
C/C99/: Makefile  README.md  bool.c  complex.c  fam.c  restrict.c  struct_init.c  vla.c
C/Misc/: Makefile  README.md  const_int_ptr_vs_int_const_ptr.c
C/Stdarg/: Makefile  README.md  sum_all.c
C/Tree_2k/: .gitignore  README.md  tree_2k.pptx
CPlusPlus/: .gitignore  00_essential_cpp_intro.pptx  01_essential_cpp_basics.pptx  02_essential_cpp_udt.pptx  03_essential_cpp_mod.pptx  04_essential_cpp_classes.pptx  05_essential_cpp_templates.pptx  06_essential_cpp_regex.pptx  08_essential_cpp_io.pptx  09_essential_cpp_containers.pptx  10_essential_algorithms.pptx  12_essential_cpp_numerics.pptx  README.md  essential_cpp.pptx  example_cpp.ipynb  exercises.md  scientific_cpp.pptx
CPlusPlus/Algorithms/: Makefile  README.md  accumulate.cpp  coordinates.txt  count_clamp.cpp  distance.cpp  find_if.cpp  find_words.cpp  for_each.cpp  generate.cpp  iota.cpp  particle_sort.cpp  permutations.cpp  text.txt  transform.cpp  zip_it.cpp
CPlusPlus/Armadillo/: Makefile  README.md  elementwise.cpp  inverse.cpp  matrix.txt  matrix_product.cpp  matrix_vector_product.cpp  read_matrix.cpp  svd.cpp
CPlusPlus/Assembler/: README.md
CPlusPlus/Basics/: Makefile  README.md  argument_passing.cpp  arrays.cpp  col_dist.cpp  data.txt  data_parser.cpp  fac.cpp  gcd.cpp  hello.cpp  local_namespace_use.cpp  scope.cpp  swap.cpp  talk.cpp
CPlusPlus/Boost/: .gitignore  Makefile  README.md  boost_vector.cpp  lorenz.cpp  plot_lorentz.plt
CPlusPlus/Boost/ProgramOptions/: CMakeLists.txt  Makefile  README.md  random.cpp  random_default.cpp
CPlusPlus/C++17/: Makefile  README.md  if_init.cpp  optional.cpp  structured_bindings.cpp  variant_visit.cpp
CPlusPlus/Classes/: Makefile  README.md  late_binding.cpp  main.cpp  particle.cpp  particle.h  static_particle.cpp  static_particle.h
CPlusPlus/Conan/: CMakeLists.txt  README.md  build.sh  conanfile.txt  generate_gaussian.cpp
CPlusPlus/Containers/: Makefile  README.md  aggregate_data.cpp  cosine_similarity.cpp  data.txt  diffusion.cpp  diffusion_main.cpp  diffusion_system.cpp  diffusion_system.h  dim_nr_counts.cpp  dim_nrs.cpp  list.cpp  multi_measurement.txt  numbers.txt  point_distances.cpp  rpn_calc.cpp  set.cpp  split_string.cpp  stats.cpp  synthesizer.cpp  tuple.cpp  vector.cpp  waves.txt
CPlusPlus/DesignPatterns/: README.md
CPlusPlus/Tbb/LineOfSight/: CMakeLists.txt  README.md  line_of_sight.ipynb
CPlusPlus/Tbb/LineOfSight/src/: CMakeLists.txt  line_of_sight.cpp  line_of_sight_serial.cpp  terrain.cpp  terrain.h  terrain_main.cpp  visibility_par.cpp  visibility_serial.cpp
DataStorage/: README.md
DataStructures/: data_structures.pptx
Debugging/: README.md  debugging.pptx  debugging_coding_style.pptx
Debugging/ClangTidy/: .gitignore  CMakeLists.txt  README.md  array_bounds.c  array_cpp.cpp  array_fixed.c  logical_operators.c  serialization.cpp  setup_compilation_database.sh  setup_config_file.sh
Fortran/: README.md  TODO.md  modern_fortran.pptx
Hdf5/: README.md  h5lt_matmul.c  hdf5extend.c
Java/: README.md
LinuxTools/: README.md
LinuxTools/Autotools/Libraries/: .gitignore  README.md  build.sh  build_debug.sh  cleanup.sh  configure.ac
LinuxTools/Autotools/Libraries/src/: .gitignore  Makefile.am  cannon_ode.c
LinuxTools/Autotools/Options/: README.md  configure.ac
LinuxTools/Autotools/Options/src/: Makefile.am  hello_world.c
LinuxTools/Autotools/Options/src/.deps/: hello_world.Po
LinuxTools/CMake/ClangTidy/: .gitignore  CMakeLists.txt  RADME.md  README.md  nqueens.cpp  state.cpp  state.h
LinuxTools/CMake/ExternalLibrary/: CMakeLists.txt  README.md  build.sh
LinuxTools/CMake/ExternalLibrary/src/: CMakeLists.txt  minimum.cpp
LinuxTools/CMake/Sort/: CMakeLists.txt  README.md  build.sh  sort.h  tdd_sort.cpp
LinuxTools/CMake/Testing/: CMakeLists.txt  README.md  fac.cpp
MPI/: README.md
Math/: README.md
Misc/: README.md  atools_managing_workflows_on_HPC.pptx  user_day_2017_profiling_debugging.pptx  worker_atools.pptx
Mpi/: README.md  domain_decomposition.pptx  mpi.pptx
NetCDF/: README.md
OpenMP/: README.md
Optimization/: README.md  broadwell_cpuinfo.txt  broadwell_meminfo.txt  broadwell_memspecs.txt  broadwell_mlc.txt  cascadelake_mlc_avx512.txt  cpuinfo.txt  haswell_cpuinfo.txt  haswell_meminfo.txt  haswell_memspecs.txt  haswell_mlc.txt  hpc_efficiency.pptx  hpc_efficiency_false_sharing.pptx  ivybridge_cpuinfo.txt  ivybridge_meminfo.txt  ivybridge_memspecs.txt  ivybridge_mlc.txt  meminfo.txt  memory_characteristics.txt  performance_measures.pptx  skylake_breniac_mlc_avx512.txt  skylake_cpuinfo.txt  skylake_lscpu.txt  skylake_meminfo.txt  skylake_mlc.txt
Pbs/: README.md
Python/: .gitignore  HOWTO_REMOTE_JUPYTER.md  INSTALL_CONDA.md  README.md  biopython.pptx  python-intro.pptx  python_coding_practices.pptx  python_development_practices.pptx  python_gis.pptx  python_hpc.pptx  python_hpc_dask.pptx  python_hpc_numba.pptx  python_intro.pptx  python_intro_gan.pptx  style.md
R/: README.md  compute.pbs  data.csv  means.R  run.sh  submit_parameterized.sh  submit_worker.sh
Spark/: README.md  pyspark.pptx  setup.md
Sql/: README.md
Virtualization/: .gitignore  README.md  alpino.sh  centos_base.def  disco_amd.def  disco_openbugs.def  disco_wine.def  singularity.pptx  singularity.xlsx  xenial_alpino_docker.def  xenial_gedit.def  xenial_gnuplot.def  xenial_grace.def  xenial_openmp.def  xenial_openmpi.def  xenial_paraview.def  xenial_python.def  xenial_svd.def  xenial_wine.def
Visualization/: README.md
docs/: README.md  screen.md
(+2763 files in other folders)
